# genai-ticket-classifier-mlflow-demo

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
dataset/: data_gold_examples.csv  support_ticket_categories_examples.csv
deck/: ~$GenAI_ApplicationDevelopment_Using_MLflow.pptx
experiments/: mlruns.db
experiments/mlruns/1/3e95949f7c34474284a922d5cce61539/artifacts/: candidates.json  objective_pareto_front.json  objective_scores.json  valset_pareto_front.json  valset_scores.json
experiments/mlruns/1/3e95949f7c34474284a922d5cce61539/artifacts/candidate_tree/: tmp3857q67f.html  (+1 more)
experiments/mlruns/1/5d45773f84b94a2286a51ef0b906826c/artifacts/: candidates.json  objective_pareto_front.json  objective_scores.json  valset_pareto_front.json  valset_scores.json
mlruns/artifacts/1/40ac44d1051145bca9a9c2773aa2c2d1/artifacts/: candidates.json  objective_pareto_front.json  objective_scores.json  valset_pareto_front.json  valset_scores.json
notebooks/: GenAI_Application_Development_Leveraging_MLflow.ipynb  GenAI_Application_Development_with_MLflow.ipynb  USE_MLflow.ipynb
prompts/: finalise_prompt.py
src/: cli.py  config.py  data.py  evaluate.py  optimize.py  predict.py  prompt.py  registry.py  scorers.py
src/genai_ticket_classifier/: __init__.py  __main__.py  app.py  cli.py  config.py  data.py  evaluate.py  optimize.py  predict.py  prompt.py  registry.py  scorers.py
tests/: test_app.py  test_cli.py  test_config.py  test_data.py  test_evaluate.py  test_predict.py  test_prompt.py  test_registry.py  test_scorers.py
(+42 files in other folders)
